# homelab

./: .bazelignore  .bazelrc  .bazelrc.ci  .bazelrc.remote  .bazelversion  .dockerignore  .envrc  .gitignore  .goosehints  .mcp.json  .pre-commit-config.yaml  .prettierignore  .semgrepignore  .tools-version  .yamllintrc  APKO_IMAGE_DIAGNOSIS.md  BUILD  CACHE_EVICTION_FIX.md  CLAUDE.md  Cargo.toml  MODULE.aspect  MODULE.bazel  Makefile  README.bazel.md  README.md  TTYD_EXIT_DIAGNOSIS.md  TTYD_IMPLEMENTATION_REVIEW.md  Taskfile.yml  WORKING-WITH-JOE.md  __init__.py  ais-spec.md  argocd_kaniko.md  argocd_migration.md  argocd_migration_prompt.md  bootstrap.sh  buildbuddy.yaml  cloudflare-creds.json  cluster-agents  deps_test.go  eslint.config.mjs  (+20 more)
.aspect/: task.axl
.aspect/gazelle/: go_image.axl  py3_image.axl
.claude/: AGENTS.md  CLAUDE.md  README.md  settings.json
.claude/commands/: ideate.md
.claude/steering/: product.md  structure.md  tech.md
.claude/templates/: project_plan.md  runbook-alert-template.md  runbook-ci-failure-template.md
.gemini/: settings.json
.github/: .ci-test  CODEOWNERS
.github-templates/workflows/: README.md  argocd-snapshot-main.yml  argocd-snapshot-pr.yml
.github/runners/: Dockerfile
.github/workflows/: auto-format.yaml  bazel-ci.yaml  bootstrap-argocd.yaml  bootstrap-argocd.yaml.disabled  build-stargazer.yml  cf-pages-deploy-hikes.yaml  cf-pages-deploy-homepage.yaml  cf-pages-deploy-trips.yaml  claude-desktop-image.yaml  cloudflare-operator.yaml  deploy-cloudflare-tunnel.yaml  deploy-cluster.yaml  deploy-container-registry.yaml  deploy-crds.yaml  deploy-external-secrets-crd.yaml  deploy-find-good-hikes.yaml  deploy-github-webhook-handler.yaml  deploy-grafana-cloud.yaml  deploy-grafana.yaml  deploy-hikes-site.yml  deploy-homelab.yaml  deploy-longhorn-crd.yaml  deploy-obsidian copy.yaml  deploy-obsidian-mcp.yaml  deploy-obsidian.yaml  deploy-open-webui.yaml  deploy-opentelemetry-collector.yaml  deploy-otel-collector.yaml  deploy-public-status-nginx.yaml  deploy-talos-cluster.yaml  deploy-uptime-kuma.yaml  gc-container-registry.yaml  gh-arc-runner-image.yaml  hello-world.yaml  homelab-deploy.yaml  integration-test.yaml  k8s-deploy-cloudflare-tunnel.yaml  k8s-deploy-external-secrets-crd.yaml  k8s-deploy-grafana-cloud.yaml  k8s-deploy-longhorn-crd.yaml  (+9 more)
.ideas/: bazel-best-practices-review.md
.spec-workflow/steering/: product.md  structure.md  tech.md
advent_of_code/: BUILD
advent_of_code/python/: BUILD  BUILD.bazel
advent_of_code/solutions/: BUILD
architecture/: BUILD  agents.md  contributing.md  observability-alerting.md  observability.md  security.md  services.md
architecture/decisions/: index.md
architecture/rfcs/: background-agents.md  context-forge.md  openhands-agent-sandbox.md  openhands-v1-sandbox-migration.md
argocd/: GITHUB_SECRETS.md  README.md  cleanup-old-workflows.sh
argocd/apps/: homelab-services.yaml  kaniko-build-hook.yaml
argocd/bootstrap/: argocd-install.yaml  argocd-operator.yaml
argocd/helm/: bootstrap.sh
argocd/operators/: docker-registry-secret.yaml  onepassword-crd.yaml  onepassword-operator.yaml
argocd/test/: README.md  deploy-argocd.sh  helm-test.sh  setup-minikube.sh  test-applicationset.yaml  test-deployment.sh  test-otel-collector-app.yaml
bazel/: ci.bazelrc  remote.bazelrc
bazel/helm/: BUILD  app.bzl  chart-version.sh  chart.bzl  ci-diff-manifests.sh  defs.bzl  helm-assert-annotations.sh  images.bzl  pre-commit-render-manifests.sh  push.bzl  push.sh.tpl  (+3 more)
cluster/: kustomization.yaml  skaffold.yaml
docs/: BUILD  agents.md  claude-code-advanced-presentation.md  conditional-image-push.md  contributing.md  digest-based-image-push.md  observability-alerting.md  observability.md  rules-semgrep-demo.md  services.md
gh-arc-runners/: application.yaml
githooks/: check-config.sh  pre-commit
ideas/: agent-controller.md  api-gateway-replacement.md  bazel-monorepo.md  cdk8s-bazel-integration.md  cdk8s-migration.md  hardcoded-values-cleanup.md  lockfile-unification.md  marine-positional-data.md  openhands.md  public-release-readiness.md  security-audit-pre-public.md  signoz-dashboard-sidecar.md  ttyd-session-manager.jsx  ttyd-session-manager.md  unified-bazel-interfaces.md  unified-frontend-build-strategy.md
images/: BUILD
models/: BUILD  defs.bzl  extensions.bzl
operator-controlflow/: go.mod
operators/: best-practices.md  research.md
patches/: @sveltejs__kit.patch  rollup.patch
projects/: BUILD
requirements/: BUILD  README.md  all.txt  overrides.txt  runtime.txt  tools.in
rules_helm/: BUILD  app.bzl  chart.bzl  ci-validate-manifests.sh  defs.bzl  push.bzl  push.sh.tpl  render.bzl  test.bzl
rules_semgrep/: BUILD  README.md  aspect.bzl  defs.bzl  semgrep-manifest-test.sh  semgrep-test.sh  target_test.bzl  test.bzl
rules_vitepress/: BUILD  site.bzl
rules_wrangler/: BUILD  defs.bzl  pages.bzl  pages_push.sh.tpl
scripts/: BUILD  claude-session-start.sh  create-argocd-snapshot.sh  detect-changed-images.sh  fix-longhorn-stale-mount.sh  generate-dev-deploy-registry.sh  generate-push-all-pages.sh  generate-push-all.sh  generate-render-all.sh  integration-test-checks.sh  publish-xyz-elevation.md  push-all-images.sh  push-if-digest-changed.sh  setup-mcp-profiles.sh  signoz-mcp-wrapper.sh  test-charts.sh  update-argocd-snapshot.sh  validate-generate-scripts.sh
semgrep_rules/: BUILD
services/: BUILD  skaffold.yaml
services/n8n-obsidian-api/: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
services/n8n-obsidian-api/app/: __init__.py  config.py  main.py
services/n8n-obsidian-api/app/clients/: obsidian.py
services/n8n-obsidian-api/app/models/: __init__.py  generated.py  obsidian.py
services/n8n-obsidian-api/app/routers/: notes.py
services/n8n-obsidian-api/examples/: test_api.py
services/n8n-obsidian-api/schema/: obsidian-openapi.yaml
sextant/: IMPROVEMENTS.md  go.mod
tools/: BUILD  bazel-cache-gc.sh  downloader.cfg  help.sh  setup-cloud-env.sh  tools.go  tools.lock.json  workspace_status.sh
websites/: BUILD
(+5281 files in other folders)
