# Currently bazel-lib is only load()ed when platforms is used.
bazel_dep(name = "aspect_bazel_lib", version = "2.21.2")
bazel_dep(name = "aspect_rules_lint", version = "1.10.2")

# Register jq toolchain for JSON processing in OCI operations
bazel_lib = use_extension("@aspect_bazel_lib//lib:extensions.bzl", "toolchains")
bazel_lib.jq()
use_repo(bazel_lib, "jq_toolchains")

bazel_dep(name = "buildifier_prebuilt", version = "8.2.0.2")
bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "bazel_skylib_gazelle_plugin", version = "1.8.2")
bazel_dep(name = "rules_multitool", version = "1.9.0")
bazel_dep(name = "bazel_env.bzl", version = "0.5.0")
bazel_dep(name = "bazelrc-preset.bzl", version = "1.5.0")

# Bazel 9: Ensure transitives don't depend on rules_nodejs prior to
# https://github.com/bazel-contrib/rules_nodejs/commit/1fc6b6b763c4f79994edc9edab10399f7446d8be
bazel_dep(name = "rules_nodejs", version = "6.6.0")
bazel_dep(name = "aspect_rules_js", version = "2.7.0")
bazel_dep(name = "aspect_rules_ts", version = "3.7.0")

# We have to take a dependency on rules_python in order to set bootstrap=script
# for transitive dependencies, even if there are no Python rules used in this repo.
# See .bazelrc
bazel_dep(name = "rules_python", version = "1.6.3")
bazel_dep(name = "rules_python_gazelle_plugin", version = "1.6.3")
bazel_dep(name = "aspect_rules_py", version = "1.6.6")
bazel_dep(name = "rules_uv", version = "0.88.0")
bazel_dep(name = "rules_rust", version = "0.63.0")
bazel_dep(name = "rules_go", version = "0.58.2")
bazel_dep(name = "gazelle", version = "0.47.0")
bazel_dep(name = "rules_shell", version = "0.6.1")
bazel_dep(name = "rules_oci", version = "2.2.6")
bazel_dep(name = "rules_apko", version = "1.5.17")
bazel_dep(name = "rules_multirun", version = "0.13.0")
bazel_dep(name = "tar.bzl", version = "0.6.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "toolchains_buildbuddy", version = "0.0.2")

# BuildBuddy RBE toolchain for remote build execution (80 cores on free tier)
buildbuddy = use_extension("@toolchains_buildbuddy//:extensions.bzl", "buildbuddy")
use_repo(buildbuddy, "buildbuddy_toolchain")

multitool = use_extension("@rules_multitool//multitool:extension.bzl", "multitool")
multitool.hub(lockfile = "//tools:tools.lock.json")
use_repo(multitool, "multitool")

#########################
# Go
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")

# Download an SDK for the host OS & architecture as well as common remote execution
# platforms, using the version given from the `go.mod` file.
go_sdk.from_file(go_mod = "//:go.mod")
go_sdk.nogo(nogo = "//tools/lint:nogo")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

# Fix for konnectivity-client proto generation issue
# Use the upstream BUILD files instead of gazelle-generated ones
go_deps.gazelle_override(
    directives = [
        "gazelle:proto disable",
    ],
    path = "sigs.k8s.io/apiserver-network-proxy/konnectivity-client",
)

# All *direct* Go dependencies of the module have to be listed explicitly.
# Run 'bazel mod tidy' to update this
use_repo(go_deps, "com_github_cloudflare_cloudflare_go", "com_github_gin_gonic_gin", "com_github_go_logr_logr", "com_github_google_uuid", "com_github_gorilla_websocket", "com_github_hay_kot_scaffold", "com_github_onsi_ginkgo_v2", "com_github_onsi_gomega", "com_github_prometheus_client_golang", "com_github_sony_gobreaker", "com_github_spf13_cobra", "com_github_stretchr_testify", "in_gopkg_yaml_v3", "io_k8s_api", "io_k8s_apimachinery", "io_k8s_client_go", "io_k8s_metrics", "io_k8s_sigs_controller_runtime", "io_k8s_sigs_gateway_api", "io_k8s_sigs_yaml", "io_k8s_utils", "io_opentelemetry_go_otel", "io_opentelemetry_go_otel_exporters_otlp_otlptrace_otlptracegrpc", "io_opentelemetry_go_otel_sdk", "io_opentelemetry_go_otel_trace", "org_golang_x_time")

#########################
# JavaScript and pnpm package manager
pnpm = use_extension("@aspect_rules_js//npm:extensions.bzl", "pnpm")

# Allows developers to run the same pnpm version that Bazel manages
use_repo(pnpm, "pnpm")

pnpm.pnpm(pnpm_version = "9.15.9")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm")
npm.npm_translate_lock(
    name = "npm",
    npmrc = "//:.npmrc",
    pnpm_lock = "//:pnpm-lock.yaml",
)
use_repo(npm, "npm")

rules_ts_ext = use_extension(
    "@aspect_rules_ts//ts:extensions.bzl",
    "ext",
    dev_dependency = True,
)
rules_ts_ext.deps()
use_repo(rules_ts_ext, "npm_typescript")

# Node.js toolchain - required for production builds (ships-frontend vite build)
# Toolchains are registered for all platforms to support cross-platform container builds
node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node")
node.toolchain(node_version = "20.18.0")
use_repo(
    node,
    "nodejs_toolchains",
    # Explicit repos for cross-platform builds
    "nodejs_darwin_amd64",
    "nodejs_darwin_arm64",
    "nodejs_linux_amd64",
    "nodejs_linux_arm64",
)

#########################
# Hermetic Python interpreter and pip dependencies
# Note: pip.parse() itself doesn't cause eager fetching - that's a good thing!
# The problem is load("@pip//:requirements.bzl") in BUILD files, which we've
# moved to //tools/python to avoid loading during CI analysis.
pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.13",
)

pip.parse(
    hub_name = "pip",
    python_version = "3.13",
    requirements_lock = "//requirements:all.txt",
)
use_repo(pip, "pip")

#########################
# Support for Rust, see https://github.com/bazelbuild/rules_rust
rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2021",
    versions = ["1.75.0"],
)

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")

# Register crane toolchains for multi-platform image operations
# Note: Using custom name to avoid conflicts with rules_oci internal toolchains
oci.toolchains(name = "custom_crane")

# Base image for GO Containers.
oci.pull(
    name = "distroless_base",
    digest = "sha256:9e9b50d2048db3741f86a48d939b4e4cc775f5889b3496439343301ff54cdba8",
    image = "gcr.io/distroless/base",
    platforms = [
        "linux/amd64",
        "linux/arm64/v8",
    ],
)
use_repo(
    oci,
    "custom_crane_crane_toolchains",  # Crane toolchains for apko_push
    "distroless_base",
    "distroless_base_linux_amd64",
    "distroless_base_linux_arm64_v8",
)

oci.pull(
    name = "python_base",
    digest = "sha256:59a458b76b4e8896031cd559576eac7d6cb53a69b38ba819fb26518536368d86",
    image = "ubuntu",
    platforms = [
        "linux/arm64/v8",
        "linux/amd64",
    ],
)
use_repo(oci, "python_base", "python_base_linux_amd64", "python_base_linux_arm64_v8")
use_repo(oci, "custom_crane_regctl_toolchains")

# GDAL base for geospatial Python services (stargazer)
# Using ubuntu-small variant with GDAL 3.6.3, includes gdal_translate, gdalwarp, etc.
# Note: Using Docker Hub (docker.io) as ghcr.io/osgeo/gdal is no longer accessible
oci.pull(
    name = "gdal_base",
    digest = "sha256:398d5aca0ca88295c13ada87e0f382ed409dac13a952461187be72ce3c376513",
    image = "docker.io/osgeo/gdal",
    platforms = [
        "linux/amd64",
        "linux/arm64",
    ],
    tag = "ubuntu-small-3.6.3",
)
use_repo(oci, "gdal_base", "gdal_base_linux_amd64", "gdal_base_linux_arm64")

# GDAL Python base - includes GDAL with Python 3.10 and pip installed
# Using ubuntu-full variant which has Python bindings properly configured
oci.pull(
    name = "gdal_python_base",
    digest = "sha256:88a83d8c787d67fe16102fdca3f3bcbc2f5010611af7957c77c67f7f0cfad876",
    image = "docker.io/osgeo/gdal",
    platforms = [
        "linux/amd64",
        "linux/arm64",
    ],
    tag = "ubuntu-full-3.6.3",
)
use_repo(oci, "gdal_python_base", "gdal_python_base_linux_amd64", "gdal_python_base_linux_arm64")

# Configure apko for container images
apko = use_extension("@rules_apko//apko:extensions.bzl", "apko")
apko.translate_lock(
    name = "claude_lock",
    lock = "//charts/claude/image:apko.lock.json",
)
apko.translate_lock(
    name = "ships_frontend_lock",
    lock = "//services/ships-frontend:apko.lock.json",
)
use_repo(apko, "claude_lock", "ships_frontend_lock")

# Download multiarch archives (binaries from zip files)
multiarch_http_archive = use_repo_rule("//tools/http:multiarch_http_archive.bzl", "multiarch_http_archive")

multiarch_http_archive(
    name = "opencode",
    amd64_sha256 = "abd7292146d3293b3347ebad84de36fa0689a7850cea53df64c73506cc463072",
    amd64_url = "https://github.com/sst/opencode/releases/download/v1.0.39/opencode-linux-x64.zip",
    arm64_sha256 = "02ca134403781337240a6308c87ee2fc515cca77c5a32e2fae859aa1540d3e44",
    arm64_url = "https://github.com/sst/opencode/releases/download/v1.0.39/opencode-linux-arm64.zip",
    binary_name = "opencode",
    package_dir = "/usr/local/bin",
)

# Download multiarch binaries (raw binary files)
multiarch_http_file = use_repo_rule("//tools/http:multiarch_http_file.bzl", "multiarch_http_file")

multiarch_http_file(
    name = "ttyd",
    amd64_sha256 = "8a217c968aba172e0dbf3f34447218dc015bc4d5e59bf51db2f2cd12b7be4f55",
    amd64_url = "https://github.com/tsl0922/ttyd/releases/download/1.7.7/ttyd.x86_64",
    arm64_sha256 = "b38acadd89d1d396a0f5649aa52c539edbad07f4bc7348b27b4f4b7219dd4165",
    arm64_url = "https://github.com/tsl0922/ttyd/releases/download/1.7.7/ttyd.aarch64",
    binary_name = "ttyd",
    package_dir = "/usr/local/bin",
)

bazel_dep(name = "rules_pkg", version = "1.1.0")
