# Currently bazel-lib is only load()ed when platforms is used.
bazel_dep(name = "aspect_bazel_lib", version = "2.22.5")
bazel_dep(name = "aspect_rules_lint", version = "1.10.2")

# Register jq toolchain for JSON processing in OCI operations
bazel_lib = use_extension("@aspect_bazel_lib//lib:extensions.bzl", "toolchains")
bazel_lib.jq()
use_repo(bazel_lib, "jq_toolchains")

bazel_dep(name = "buildifier_prebuilt", version = "8.2.0.2")
bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "bazel_skylib_gazelle_plugin", version = "1.8.2")
bazel_dep(name = "rules_multitool", version = "1.9.0")
bazel_dep(name = "bazel_env.bzl", version = "0.5.0")
bazel_dep(name = "bazelrc-preset.bzl", version = "1.5.0")

# Bazel 9: Ensure transitives don't depend on rules_nodejs prior to
# https://github.com/bazel-contrib/rules_nodejs/commit/1fc6b6b763c4f79994edc9edab10399f7446d8be
bazel_dep(name = "rules_nodejs", version = "6.7.3")
bazel_dep(name = "aspect_rules_js", version = "3.0.0-rc4")
bazel_dep(name = "aspect_rules_ts", version = "3.8.3")
bazel_dep(name = "aspect_rules_esbuild", version = "0.25.0")

# We have to take a dependency on rules_python in order to set bootstrap=script
# for transitive dependencies, even if there are no Python rules used in this repo.
# See .bazelrc
bazel_dep(name = "rules_python", version = "1.7.0")
bazel_dep(name = "rules_python_gazelle_plugin", version = "1.8.1")
bazel_dep(name = "aspect_rules_py", version = "1.8.4")
bazel_dep(name = "rules_uv", version = "0.88.0")
bazel_dep(name = "rules_rust", version = "0.63.0")
bazel_dep(name = "rules_go", version = "0.59.0")
bazel_dep(name = "gazelle", version = "0.47.0")
bazel_dep(name = "rules_shell", version = "0.6.1")
bazel_dep(name = "rules_oci", version = "2.2.6")
bazel_dep(name = "rules_apko", version = "1.5.30")
bazel_dep(name = "rules_multirun", version = "0.13.0")
bazel_dep(name = "tar.bzl", version = "0.6.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "toolchains_buildbuddy", version = "0.0.4")

# BuildBuddy RBE toolchain for remote build execution (80 cores on free tier)
buildbuddy = use_extension("@toolchains_buildbuddy//:extensions.bzl", "buildbuddy")
use_repo(buildbuddy, "buildbuddy_toolchain")

multitool = use_extension("@rules_multitool//multitool:extension.bzl", "multitool")
multitool.hub(lockfile = "//tools:tools.lock.json")
use_repo(multitool, "multitool")

#########################
# Go
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")

# Download an SDK for the host OS & architecture as well as common remote execution
# platforms, using the version given from the `go.mod` file.
go_sdk.from_file(go_mod = "//:go.mod")
go_sdk.nogo(nogo = "//tools/lint:nogo")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

# Fix for konnectivity-client proto generation issue
# Use the upstream BUILD files instead of gazelle-generated ones
go_deps.gazelle_override(
    directives = [
        "gazelle:proto disable",
    ],
    path = "sigs.k8s.io/apiserver-network-proxy/konnectivity-client",
)

# All *direct* Go dependencies of the module have to be listed explicitly.
# Run 'bazel mod tidy' to update this
use_repo(go_deps, "com_github_cloudflare_cloudflare_go", "com_github_gin_gonic_gin", "com_github_go_logr_logr", "com_github_google_go_containerregistry", "com_github_google_uuid", "com_github_gorilla_websocket", "com_github_hay_kot_scaffold", "com_github_onsi_ginkgo_v2", "com_github_onsi_gomega", "com_github_prometheus_client_golang", "com_github_sony_gobreaker", "com_github_spf13_cobra", "com_github_stretchr_testify", "in_gopkg_yaml_v3", "io_k8s_api", "io_k8s_apimachinery", "io_k8s_client_go", "io_k8s_metrics", "io_k8s_sigs_controller_runtime", "io_k8s_sigs_gateway_api", "io_k8s_sigs_yaml", "io_k8s_utils", "io_opentelemetry_go_otel", "io_opentelemetry_go_otel_exporters_otlp_otlptrace_otlptracegrpc", "io_opentelemetry_go_otel_sdk", "io_opentelemetry_go_otel_trace", "org_golang_x_sync", "org_golang_x_time")

#########################
# JavaScript and pnpm package manager
pnpm = use_extension("@aspect_rules_js//npm:extensions.bzl", "pnpm")

# Allows developers to run the same pnpm version that Bazel manages
use_repo(pnpm, "pnpm")

pnpm.pnpm(pnpm_version = "9.15.9")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm")
npm.npm_translate_lock(
    name = "npm",
    npmrc = "//:.npmrc",
    pnpm_lock = "//:pnpm-lock.yaml",
)
use_repo(npm, "npm")

rules_ts_ext = use_extension(
    "@aspect_rules_ts//ts:extensions.bzl",
    "ext",
    dev_dependency = True,
)
rules_ts_ext.deps()
use_repo(rules_ts_ext, "npm_typescript")

# Node.js toolchain - required for production builds (ships_frontend vite build)
# Toolchains are registered for all platforms to support cross-platform container builds
node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node")
node.toolchain(node_version = "20.19.0")
use_repo(
    node,
    "nodejs_toolchains",
    # Explicit repos for cross-platform builds
    "nodejs_darwin_amd64",
    "nodejs_darwin_arm64",
    "nodejs_linux_amd64",
    "nodejs_linux_arm64",
)

#########################
# Hermetic Python interpreter and pip dependencies
# Note: pip.parse() itself doesn't cause eager fetching - that's a good thing!
# The problem is load("@pip//:requirements.bzl") in BUILD files, which we've
# moved to //tools/python to avoid loading during CI analysis.
pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.13",
)

pip.parse(
    hub_name = "pip",
    python_version = "3.13",
    requirements_lock = "//requirements:all.txt",
)
use_repo(pip, "pip")

#########################
# Support for Rust, see https://github.com/bazelbuild/rules_rust
rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2021",
    versions = ["1.75.0"],
)

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")

# Register crane toolchains for multi-platform image operations
# Note: Using custom name to avoid conflicts with rules_oci internal toolchains
oci.toolchains(name = "custom_crane")

# Empty/scratch base image for minimal OCI builds (e.g., ML models)
# distroless/static:nonroot - smallest distroless image, ideal for data-only containers
oci.pull(
    name = "empty_base",
    digest = "sha256:f9f84bd968430d7d35e8e6d55c40efb0b980829ec42920a49e60e65eac0d83fc",
    image = "gcr.io/distroless/static",
    platforms = [
        "linux/amd64",
        "linux/arm64/v8",
    ],
    tag = "nonroot",
)

# Base image for GO Containers.
oci.pull(
    name = "distroless_base",
    digest = "sha256:9e9b50d2048db3741f86a48d939b4e4cc775f5889b3496439343301ff54cdba8",
    image = "gcr.io/distroless/base",
    platforms = [
        "linux/amd64",
        "linux/arm64/v8",
    ],
)
use_repo(
    oci,
    "custom_crane_crane_toolchains",  # Crane toolchains for apko_push
    "distroless_base",
    "distroless_base_linux_amd64",
    "distroless_base_linux_arm64_v8",
    "empty_base",
    "empty_base_linux_amd64",
    "empty_base_linux_arm64_v8",
)

oci.pull(
    name = "python_base",
    digest = "sha256:59a458b76b4e8896031cd559576eac7d6cb53a69b38ba819fb26518536368d86",
    image = "ubuntu",
    platforms = [
        "linux/arm64/v8",
        "linux/amd64",
    ],
)
use_repo(oci, "python_base", "python_base_linux_amd64", "python_base_linux_arm64_v8")
use_repo(oci, "custom_crane_regctl_toolchains")

# GDAL base for geospatial Python services (stargazer)
# Using ubuntu-small variant with GDAL 3.6.3, includes gdal_translate, gdalwarp, etc.
# Note: Using Docker Hub (docker.io) as ghcr.io/osgeo/gdal is no longer accessible
oci.pull(
    name = "gdal_base",
    digest = "sha256:398d5aca0ca88295c13ada87e0f382ed409dac13a952461187be72ce3c376513",
    image = "docker.io/osgeo/gdal",
    platforms = [
        "linux/amd64",
        "linux/arm64",
    ],
    tag = "ubuntu-small-3.6.3",
)
use_repo(oci, "gdal_base", "gdal_base_linux_amd64", "gdal_base_linux_arm64")

# GDAL Python base - includes GDAL with Python 3.10 and pip installed
# Using ubuntu-full variant which has Python bindings properly configured
oci.pull(
    name = "gdal_python_base",
    digest = "sha256:88a83d8c787d67fe16102fdca3f3bcbc2f5010611af7957c77c67f7f0cfad876",
    image = "docker.io/osgeo/gdal",
    platforms = [
        "linux/amd64",
        "linux/arm64",
    ],
    tag = "ubuntu-full-3.6.3",
)
use_repo(oci, "gdal_python_base", "gdal_python_base_linux_amd64", "gdal_python_base_linux_arm64")

# Configure apko for container images
apko = use_extension("@rules_apko//apko:extensions.bzl", "apko")
apko.translate_lock(
    name = "claude_lock",
    lock = "//charts/claude/image:apko.lock.json",
)
apko.translate_lock(
    name = "ships_frontend_lock",
    lock = "//services/ships_frontend:apko.lock.json",
)
apko.translate_lock(
    name = "todo_lock",
    lock = "//charts/todo/image:apko.lock.json",
)
use_repo(apko, "claude_lock", "ships_frontend_lock", "todo_lock")

# Download multiarch archives (binaries from zip files)
multiarch_http_archive = use_repo_rule("//tools/http:multiarch_http_archive.bzl", "multiarch_http_archive")

multiarch_http_archive(
    name = "opencode",
    amd64_sha256 = "abd7292146d3293b3347ebad84de36fa0689a7850cea53df64c73506cc463072",
    amd64_url = "https://github.com/sst/opencode/releases/download/v1.0.39/opencode-linux-x64.zip",
    arm64_sha256 = "02ca134403781337240a6308c87ee2fc515cca77c5a32e2fae859aa1540d3e44",
    arm64_url = "https://github.com/sst/opencode/releases/download/v1.0.39/opencode-linux-arm64.zip",
    binary_name = "opencode",
    package_dir = "/usr/local/bin",
)

# Download multiarch binaries (raw binary files)
multiarch_http_file = use_repo_rule("//tools/http:multiarch_http_file.bzl", "multiarch_http_file")

multiarch_http_file(
    name = "ttyd",
    amd64_sha256 = "8a217c968aba172e0dbf3f34447218dc015bc4d5e59bf51db2f2cd12b7be4f55",
    amd64_url = "https://github.com/tsl0922/ttyd/releases/download/1.7.7/ttyd.x86_64",
    arm64_sha256 = "b38acadd89d1d396a0f5649aa52c539edbad07f4bc7348b27b4f4b7219dd4165",
    arm64_url = "https://github.com/tsl0922/ttyd/releases/download/1.7.7/ttyd.aarch64",
    binary_name = "ttyd",
    package_dir = "/usr/local/bin",
)

bazel_dep(name = "rules_pkg", version = "1.1.0")

#########################
# HuggingFace Models
# Use hf_lock.sh to generate sha256 pins: ./tools/hf_lock.sh <repo_id> -f "*.gguf"
hf = use_extension("//models:extensions.bzl", "hf")

# Qwen 2.5 0.5B Instruct - GGUF format (Q4_K_M quantization)
# Compact model suitable for CPU inference with llama.cpp
hf.model(
    name = "qwen2_5_0_5b_gguf",
    files = {
        "qwen2.5-0.5b-instruct-q4_k_m.gguf": "74a4da8c9fdbcd15bd1f6d01d621410d31c6fc00986f5eb687824e7b93d7a9db",
    },
    repo_id = "Qwen/Qwen2.5-0.5B-Instruct-GGUF",
    revision = "9217f5db79a29953eb74d5343926648285ec7e67",
)

# Qwen 2.5 0.5B Instruct - SafeTensors format
# Full precision model for vLLM or transformers inference
hf.model(
    name = "qwen2_5_0_5b_st",
    files = {
        "config.json": "18e18afcaccafade98daf13a54092927904649e1dd4eba8299ab717d5d94ff45",
        "model.safetensors": "fdf756fa7fcbe7404d5c60e26bff1a0c8b8aa1f72ced49e7dd0210fe288fb7fe",
        "tokenizer.json": "c0382117ea329cdf097041132f6d735924b697924d6f6fc3945713e96ce87539",
        "tokenizer_config.json": "5b5d4f65d0acd3b2d56a35b56d374a36cbc1c8fa5cf3b3febbbfabf22f359583",
    },
    repo_id = "Qwen/Qwen2.5-0.5B-Instruct",
    revision = "7ae557604adf67be50417f59c2c2f167def9a775",
)

# Qwen3 30B A3B AWQ - Quantized model for vLLM inference
# Used in prod vLLM deployment (~16GB total)
hf.model(
    name = "qwen3_30b_a3b_awq",
    files = {
        "config.json": "311c3e8ee5a15c2492bd6b23ba602432706d0bb1d5a14ac34b8f77e8939df948",
        "generation_config.json": "81051cd3f6e77013827148d0b8a6ead93f8ac390d5ab805f849199f0af6a08db",
        "model-00001-of-00004.safetensors": "e6c2ef7327fb0489d94b28b3fa3c104187dc7d723d4909c8dc20b6d8d0f8c885",
        "model-00002-of-00004.safetensors": "71027546a0cc4bf2e77574deaf4523bc3c8a0bc094ea50dd73d6d4f5e614d1e8",
        "model-00003-of-00004.safetensors": "dd92d301d5c64df48f7bbc3f34c7ac78f840ff664e9494dc9360c032c2ac72db",
        "model-00004-of-00004.safetensors": "d620e43ba1a0d0f44662d449e725b49502de9b735855c45706d71c66ca68a73d",
        "model.safetensors.index.json": "f5b4f889fe28ee7965333f4d8a14a357b81b9a0b7b3331217061342a791844d2",
        "tokenizer.json": "aeb13307a71acd8fe81861d94ad54ab689df773318809eed3cbe794b4492dae4",
        "tokenizer_config.json": "253153d0738ceb4c668d2eff957714dd2bea0b56de772a9fdccd96cbf517e6a0",
    },
    repo_id = "QuixiAI/Qwen3-30B-A3B-AWQ",
    revision = "main",
)

# Hermes 4.3 36B AWQ 8-bit - Quantized model for vLLM inference
# NousResearch reasoning model based on ByteDance Seed 36B (~40GB total)
hf.model(
    name = "hermes_4_3_36b_awq",
    files = {
        "config.json": "a6c38471417115e05a8033506c1f8feada09bad84d50b8c7123a157db55ddcd1",
        "generation_config.json": "5a7a36f298e85a6defa6dbee3e00e19681bf70827a9a80710bcc7edbbd0091f0",
        "model-00001-of-00009.safetensors": "1c87100d8c2550a4526632720990506ce247a8194bd6ffc21c7e0fa1f5ae1bcd",
        "model-00002-of-00009.safetensors": "8b7b25b2d769f51c1ed4919b98b1cdba5f7911fc35ad010da4eb68dafec6a542",
        "model-00003-of-00009.safetensors": "e44052c6732a8e31a1857a64454d5af462470d91a4f40fffd4cf5a595061c54f",
        "model-00004-of-00009.safetensors": "4865c18fcf93586760a46b487baeef197dbceac182042b0bd35ebb8ce01ded37",
        "model-00005-of-00009.safetensors": "05c7a653e15c9f970cc6353cc5eb726c7c1bf5940a78987314cb3ce84a6cd5b2",
        "model-00006-of-00009.safetensors": "fffcf875eaecdbd248c95e579eaad5e149a305e8545fcf821685f060ad756459",
        "model-00007-of-00009.safetensors": "49486f644ba0c7ea92d79a4522b4ea52b4986892d0f55ee5fea4d0798e83dfbd",
        "model-00008-of-00009.safetensors": "4572628dc9a144f71202a3e5f7b6babf97a0b03b12807727d4dbdcda5894cf48",
        "model-00009-of-00009.safetensors": "1d3a55380723b1451f25e81f03c44131ff15b4d8d368024b87829b3f6f959e59",
        "model.safetensors.index.json": "34444d6a2be048f1920708a46ec527c847bcfd1fc6392223708b055419a50106",
        "tokenizer.json": "2c72155b82ca0ffeb89a6edb66bcc10c27d1d1491d0ff1b469a092632aba79fb",
        "tokenizer_config.json": "707335ac85992566ffda5be6b227b0b1d519b81f02126a84d58d88740bed8d99",
    },
    repo_id = "cyankiwi/Hermes-4.3-36B-AWQ-8bit",
    revision = "aeb5700b379800d4589b902acdc66a961c8c953e",
)

# Hermes 4.3 36B IQ4_XS - GGUF quantized model for llama.cpp inference
# Compact 4-bit quantization (~19GB) for GPU + KV offload to system RAM
hf.model(
    name = "hermes_4_3_36b_iq4xs",
    files = {
        "NousResearch_Hermes-4.3-36B-IQ4_XS.gguf": "c605ca44197629a5817bba5cd5c142c50ef12bbb3f19e37b8c2ba3e6691fa656",
    },
    repo_id = "bartowski/NousResearch_Hermes-4.3-36B-GGUF",
    revision = "56b57c47136327060928c009c5164be185e4d4e9",
)
use_repo(hf, "hermes_4_3_36b_awq", "hermes_4_3_36b_iq4xs", "qwen2_5_0_5b_gguf", "qwen2_5_0_5b_st", "qwen3_30b_a3b_awq")
