[project]
name = "homelab"
classifiers = ["Private :: Do Not Upload"]
version = "0"

# Dependencies should NOT use "Version Matching clauses" (matching operator `==`)
# https://packaging.python.org/en/latest/specifications/version-specifiers/#version-matching
# This project uses 'uv pip compile' from https://github.com/astral-sh/uv
# which will ensure the resolved versions of both direct and indirect dependencies are pinned.
# Therefore we only need to constrain versions when some ranges
# of dependency versions are not compatible.
dependencies = [
    "aiohttp",
    "fastapi>=0.115.0",
    "fastmcp>=3.0.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic~=2.5",
    "pydantic-settings~=2.1",
    "pydantic-extra-types~=2.0",
    "pydantic-sqlite~=0.3.0",
    "httpx~=0.28.1",
    "requests>=2.31",
    "requests-cache~=1.1",
    "beautifulsoup4~=4.12",
    "pyyaml~=6.0",
    "haversine~=2.8",
    "sunrisesunset~=1.0",
    "timelength~=1.0",
    "bng-latlon~=1.0",
    "typer~=0.9",
    "jinja2~=3.1",
    "python-multipart>=0.0.20",
    "apscheduler~=3.10",
    "pytest~=7.4",
    "pytest-bdd~=7.0",
    "pytest-asyncio~=0.21",
    "python-dateutil~=2.8",
    "pytz~=2024.0",
    "boto3>=1.34",
    "brotli>=1.1",
    "open-gopro[gui]>=0.22.0",
    # Transitive dep of bleak (used by open-gopro for Bluetooth)
    "dbus-fast>=1.83.0,<3",
    "opentelemetry-api~=1.22",
    "opentelemetry-sdk~=1.22",
    "opentelemetry-instrumentation-fastapi>=0.43b0",
    "opentelemetry-instrumentation-httpx>=0.43b0",
    "opentelemetry-exporter-otlp~=1.22",
    # Trips API dependencies
    "nats-py~=2.9",
    # AIS ingest dependencies
    "websockets>=15.0",
    "certifi",  # CA certificates for SSL in minimal containers
    # Ships API dependencies
    "aiosqlite~=0.20",
    # Stargazer geospatial dependencies
    "rasterio~=1.3",
    "geopandas>=0.14",
    "shapely~=2.0",
    "pillow>=12.1.1",
    "astral~=3.2",
    "networkx~=3.0",
    "osmium~=4.0",
    # cdk8s for Kubernetes manifest generation
    "cdk8s~=2.68",
    "constructs~=10.0",
    # XML parsing with XXE protection
    "defusedxml~=0.7",
    # Bosun (Claude Code web interface) dependencies
    "google-genai~=1.56",
    "starlette>=0.47.2",
    # Obsidian vault embedding (CPU-only, in-process)
    "fastembed>=0.6",
    # Monolith dependencies
    "sqlmodel~=0.0.22",
]

# See https://docs.astral.sh/ruff/configuration/
[tool.ruff]
extend-exclude = [".claude/worktrees"]
